data/derived/sp14/progs/unify/prog4188.ml.out
Characters 94-113:
  |(c, h::t) -> (c, mulByDigit h x)
                ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
